<resources>
    <string name="app_name">Berg burg</string>
    <string name="entrar">Entrar</string>
    <string name="controle_de_acesso">Controle de acesso</string>
    <string name="fazer_pedido">Fazer pedido</string>
    <string name="consultar_pedido">Consultar pedido</string>
    <string name="sair">Sair</string>
    <string name="adicionar_produtos">Adicionar produtos</string>
    <string name="total">Total</string>
    <string name="sucesso">Sucesso</string>
    <string name="erro">Erro</string>
    <string name="removido">Removido</string>
    <string name="pedido_confirmado">Pedido confirmado</string>
    <string name="adicionado">Adicionado</string>
    <string name="cardapio">Cardápio</string>
    <string name="enviar_comanda">Enviar comanda</string>
    <string name="menu_principal">Menu principal</string>
    <string name="selecionar_mesa">Selecionar mesa</string>
    <string name="confirmar">Confirmar</string>
    <string name="confirmar_quantidade">Confirmar quantidade</string>
    <string name="cancelar">Cancelar</string>
    <string name="quantidade">Quantidade:</string>
    <string name="observacoes">Observações:</string>
    <string name="informacoes_item">Informações do item</string>
    <string name="descricao">Descrição</string>
    <string name="nome">Nome:</string>
    <string name="preco">Preço:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="status">Status</string>
    <string name="enviado">Enviado</string>
    <string name="preparando">Preparando</string>
    <string name="concluido">Concluido</string>
    <string name="cancelado">Cancelado</string>
    <string name="naoEnviado">Não enviado</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="adicionar">Adicionar</string>
    <string name="exibir">Exibir</string>
    <string name="sem_conexao">Sem conexão com a internet.</string>
    <string name="id">ID</string>
    <string name="mesa">Mesa</string>
    <string name="pedido">Pedido</string>
    <string name="itens">Itens</string>
    <string name="pedidos">Pedidos</string>
    <string name="sem_pedidos">Sem pedidos</string>
    <string name="agradecimento">Obrigado pela preferência!</string>
    <string name="empremir">Impremir</string>
</resources>